--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
+    "fs-extra": "^11.3.3",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.6.1",
     "moment": "^2.30.1",
