--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
+    "form-data": "^4.0.5",
     "fs-extra": "^11.3.3",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.6.1",
@@ -35,6 +36,7 @@
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
     "node-cron": "^4.2.1",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.5",
     "nodemon": "^3.1.9",
     "pdfkit": "^0.17.1",
