--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@aws-sdk/lib-storage": "^3.939.0",
     "@aws-sdk/s3-request-presigner": "^3.940.0",
     "archiver": "^7.0.1",
+    "axios": "^1.13.5",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^1.41.3",
